--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches: [ main ]
     paths-ignore:
-      - 'README'
+      - 'README.md'
       - '.gitignore'
       - '.github/**'
   pull_request:
     branches: [ main ]
     paths-ignore:
-      - 'README'
+      - 'README.md'
       - '.gitignore'
       - '.github/**'
 
